# heimdall-errors

./: .gitignore  Cargo.toml  LICENSE  README.md
examples/: enum_error_v1.rs  struct_error_v1.rs  struct_error_v2.rs
src/: lib.rs
