[package]
name = "heimdall_errors"
version = "0.1.0"
edition = "2021"
authors = ["johnteper <johnteper@stellamar.tech>"]
description = "Macro for rust errors"
license = "MIT"
repository = "https://github.com/StellaMarTech/heimdall-errors"
homepage = "https://github.com/StellaMarTech/heimdall-errors"
